logo and NIS-Elements layout commit

--- a/_site.yml
+++ b/_site.yml
@@ -4,6 +4,9 @@ description: |
   microscopy-threads
 output_dir: "docs"
 navbar:
+logo:
+    image: images/nikon_logo.PNG
+    href: https://www.microscope.healthcare.nikon.com/
   right:
     - text: "Home"
       href: index.html
