--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
 name: "microscopy-threads"
-title: "Microscopy Threads "
+title: "Microscopy Threads"
 description: |
-  Blog | Mark Rigby  
+  Blog mark rigby  
 output_dir: "docs"
 #base_url: https://markrigby.github.io/microscopy-threads/
 #favicon: images/favicon2.png
